[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recua"]

[project]
name = "recua"
version = "0.1.0"
description = "Embeddable high-performance file transfer engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
progress = ["rich>=13"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-timeout",
    "responses",
    "mypy",
    "ruff",
]

[tool.coverage.run]
source = ["recua"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.\\s*$",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=recua --cov-report=term-missing --cov-report=html"
